--- a/public/chat.html
+++ b/public/chat.html
@@ -152,7 +152,7 @@
             <!-- footer -->
             <!-- ============================================================== -->
             <footer class="footer">
-                Super Chat - Fernando Herrera
+                Chat - Rodrigo Vega
             </footer>
             <!-- ============================================================== -->
             <!-- End footer -->
